--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src=""C:\Users\Kashif ahmad\portfolio-main\portfolio-main\dp.jpg"" alt="">
+                    <img src="portfolio-main\dp.jpg" alt="">
                 </div>
                 <div class="column right">
                     <div class="text">I'm Kashif and I'm a <span class="typing-2"></span></div>
