--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                             <i class="fas fa-map-marker-alt"></i>
                             <div class="info">
                                 <div class="head">Address</div>
-                                <div class="sub-title">Dehradun, UK</div>
+                                <div class="sub-title">New Delhi, India</div>
                             </div>
                         </div>
                         <div class="row">
