--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                     <div class="box">
                         <img src="pw.jpg" alt="">
                         <div class="text">Data Science Trainee</div>
-                        <p><b>Infosys Springboards</b>
+                        <p><b>PW Skills</b>
                             <br>Jan '23 - Dec '23
                             <br><br>* In this training program, I developed expertise in Python for data analysis and machine learning, gaining a solid foundation in statistics while exploring various machine learning models.
                             <br>* Specialized in neural networks, deep learning and natural language processing while learning big data handling with Hadoop and Spark.
